about page layout at mobile and desktop, tighten up homepage align slider arrows on this, navigation titles and links correct

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -399,7 +399,7 @@
   .logo-w{
     height: auto;
     padding: 20px 0;
-    top: 30px;
+    /* top: 30px; */
   }
 }
 
